--- a/src/view/Components/Import/TransactionItem/style.scss
+++ b/src/view/Components/Import/TransactionItem/style.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: stretch;
-  margin: 2px 0;
 
   .main-content {
     display: flex;
