--- a/src/view/Views/Import/style.scss
+++ b/src/view/Views/Import/style.scss
@@ -7,7 +7,7 @@
 .content-header {
   position: sticky;
   top: 50px;
-  z-index: 10;
+  z-index: 1000;
   padding: 10px 0;
 }
 
@@ -91,6 +91,7 @@
   flex-flow: column nowrap;
   align-items: stretch;
   position: relative;
+  row-gap: 2px;
 
   .paginator {
     margin-right: auto;
